migrate all from js to ts

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
   <body>
     <canvas id="c"></canvas>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@0.146.0/build/three.module.js"
-        }
-      }
-    </script>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./src/app.ts"></script>
   </body>
 </html>
